--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Jaadu</string>
     <string name="start_speech_recognition">start_speech_recognition</string>
+    <string name="start">start</string>
 </resources>
